--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My_Name Homepage</title>
+	<title>badwebsite</title>
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 </head>
 <body>
 	<main>
-		<p>This page was generated from Wes' File Structure Template Repo.</p>
-		
-		<p>Go crazy and customize me.</p>
+		<p>wake up</p>
+
+		<p>cellar door</p>
+
+		<p>seth rogan and the rabbit man</p>
 	</main>
 
 
