--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<title>badwebsite</title>
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 </head>
-<body>
+<body style="background-color:powderblue;">
 	<main>
 		<p>donnie darko</p>
 
-		<p>cellar door</p>
+		<p style="color:blue;">cellar door</p>
 
 
 	</main>
