--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<title>badwebsite</title>
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 </head>
-<body style="background-color:powderblue;">
+<body style="background-color:black;">
 	<main>
-		<p>donnie darko</p>
+		<h1 style="color:white;">elijah solow ohashi</h1>
 
-		<p style="color:blue;">cellar door</p>
+		<p style="color:white;">§ § § § § § § § § §</p>
 
 
 	</main>
