--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 </head>
 <body style="background-color:black;">
 	<main>
-		<h1 style="color:white;">elijah solow ohashi</h1>
-
-		<p style="color:white;">§ § § § § § § § § §</p>
+		<h1 style="color:white;font-family:verdana">elijah solow ohashi</h1>
 
 
 	</main>
