--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style="background-color:black;">
 	<main>
-		<h1 style="color:white;font-family:verdana">elijah solow ohashi</h1>
+		<h1 style="color:white;font-family:arial">elijah solow ohashi</h1>
 
 
 	</main>
