--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 <body style="background-color:black;">
 	<main>
-		<h1 style="color:white;font-family:arial">elijah solow ohashi</h1>
-
+		<h1 style="color:white;font-family:arial"><del>elijah solow ohashi</del></h1>
+		<h1 style="color:white;font-family:arial">artist for hire</h1>
+		<h1 style="color:white;font-family:arial">likes: chess and rockwell</h1>
 
 	</main>
 
