--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 
 	</main>
 
+	<footer>
+  	<p>Author: Hege Refsnes<br>
+  	<a href="https://www.instagram.com/solowohashi/">instagram</a></p>
+	</footer>
+
 
 </body>
 </html>
