--- a/index.html
+++ b/index.html
@@ -9,14 +9,9 @@
 		<h1 style="color:white;font-family:arial"><del>elijah solow ohashi</del></h1>
 		<h1 style="color:white;font-family:arial">artist for hire</h1>
 		<h1 style="color:white;font-family:arial">likes: chess and rockwell</h1>
+		<a style="color:white;font-family:arial" href="https://www.instagram.com/solowohashi/">instagram</a></p>
 
 	</main>
-
-	<footer>
-  	<p>Author: Hege Refsnes<br>
-  	<a href="https://www.instagram.com/solowohashi/">instagram</a></p>
-	</footer>
-
 
 </body>
 </html>
