--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <body style="background-color:black;">
 	<main>
 		<h1 style="color:white;font-family:arial"><del>elijah solow ohashi</del></h1>
-		<h1 style="color:white;font-family:arial">artist for hire</h1>
-		<h1 style="color:white;font-family:arial">likes: chess and rockwell</h1>
+		<h1 style="color:white;font-family:arial">chess, vangelis, and donnie darko</h1>
 		<a style="color:white;font-family:arial" href="https://www.instagram.com/solowohashi/">instagram</a></p>
 
 	</main>
