--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 <body style="background-color:black;">
 	<main>
-		<h1 style="color:white;font-family:arial"><del>elijah solow ohashi</del></h1>
-		<h1 style="color:white;font-family:arial">chess, vangelis, and donnie darko</h1>
+		<h1 style="color:white;font-family:arial">solowohashi (born elijah solow ohashi; September 13, 2000-June 5, 2062)
+			 was an american composer of russian-jewish descent, best known for his work in composing for motion
+			  pictures. as a conductor, he championed the music of lesser-known composers.</h1>
 		<a style="color:white;font-family:arial" href="https://www.instagram.com/solowohashi/">instagram</a></p>
 
 	</main>
