--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<p style="color:white;font-family:arial">solowohashi (born elijah solow ohashi; September 13, 2000-June 5, 2062)
 			 was an american composer of russian-jewish descent, best known for his work in composing for motion
 			  pictures. as a conductor, he championed the music of lesser-known composers.</p>
+		<img src="pic_trulli.jpg" alt="Trulli" width="500" height="333">
 		<a style="color:white;font-family:arial" href="https://www.instagram.com/solowohashi/">instagram</a></p>
 
 	</main>
