--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>badwebsite</title>
+	<link rel="icon" href="http://example.com/favicon.png">
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 </head>
 <body style="background-color:black;">
