--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>badwebsite</title>
-	<link rel="shortcut icon" type="image/png" href="img/favicon.png">
 	<link rel="stylesheet" type="text/css" href="css/site.css">
+	<link rel="apple-touch-icon" type="image/coding_html.png" href="personicon.png">
 </head>
 <body style="background-color:black;">
 	<main>
