--- a/lab2/index.html
+++ b/lab2/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-	<h1>Hello World</h1>
+	<h1>HELLO WORLD</h1>
 	<p>Francisco Amezcua
 		Born: February 12, 2000
 		Major: Computer Science
