--- a/lab2/index.html
+++ b/lab2/index.html
@@ -8,13 +8,13 @@
 <body>
 	<h1>HELLO WORLD</h1>
 	<p>Francisco Amezcua
-		Born: February 12, 2000
-		Major: Computer Science
+		Born: February 12, 2000,
+		Major: Computer Science,
 		Hobbies: Rock climing, skating, and playing chess
 	</p>
 	<p>Elijah Solow-Ohashi
-		Born: September 13, 2000
-		Majors: Art and Film
+		Born: September 13, 2000,
+		Majors: Art and Film,
 		Hobbies: Skating, drawing, and chess
 
 </body>
