--- a/lab2/index.html
+++ b/lab2/index.html
@@ -5,17 +5,19 @@
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
-<body>
-	<h1>HELLO WORLD</h1>
-	<p>Francisco Amezcua
-		Born: February 12, 2000,
-		Major: Computer Science,
-		Hobbies: Rock climing, skating, and playing chess
-	</p>
-	<p>Elijah Solow-Ohashi
-		Born: September 13, 2000,
-		Majors: Art and Film,
-		Hobbies: Skating, drawing, and chess
-
-</body>
+	<body>
+		<div id="somethin">
+			<h1>HELLO WORLD</h1>
+			<p>Francisco Amezcua
+				Born: February 12, 2000,
+				Major: Computer Science,
+				Hobbies: Rock climing, skating, and playing chess
+			</p>
+			<p>Elijah Solow-Ohashi
+				Born: September 13, 2000,
+				Majors: Art and Film,
+				Hobbies: Skating, drawing, and chess
+			</p>
+		</div>
+	</body>
 </html>
