--- a/lab2/index.html
+++ b/lab2/index.html
@@ -11,7 +11,7 @@
 			<p>Francisco Amezcua
 				Born: February 12, 2000,
 				Major: Computer Science,
-				Hobbies: Rock climing, skating, and playing chess
+				Hobbies: Rock climbing, skating, and playing chess
 			</p>
 			<p>Elijah Solow-Ohashi
 				Born: September 13, 2000,
