--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
 </head>
 <body style="background-color:black;">
 	<main>
-		<p style="color:white;font-family:arial">solowohashi (born elijah solow ohashi; September 13, 2000-June 5, 2062)
-			 was an american composer of russian-jewish descent, best known for his work in composing for motion
-			  pictures. as a conductor, he championed the music of lesser-known composers.</p>
+		<p style="color:white;font-family:arial">solowohashi, born elijah solow-ohashi, is a stuent at the university of california, santa cruz</p>
 		<a style="color:white;font-family:arial" href="https://www.instagram.com/solowohashi/">instagram</a></p>
-
-
-
+		<nav>
+			<ul>
+				<li><a href="lab2/index.html"> lab 2 </a></li>
+				<li><a href="lab3/index.html"> lab 3 </a></li>
+				<li><a href="lab4/index.html"> lab 4 </a></li>
+				<li><a href="lab5/index.html"> lab 5 </a></li>
+				<li><a href="lab6/index.html"> lab 6 </a></li>
 	</main>
 
 </body>
