--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<main>
 		<p style="color:white;font-family:arial">solowohashi, born elijah solow-ohashi, is a stuent at the university of california, santa cruz</p>
 		<a style="color:white;font-family:arial" href="https://www.instagram.com/solowohashi/">instagram</a></p>
-		<img src="cst25/45d.png"/>
+		<img src="img/agh.jpg"/>
 		<nav>
 			<ul>
 				<li><a href="lab2/index.html"> lab 2 </a></li>
