--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-color:black;">
 	<main>
-		<p style="color:white;font-family:arial">solowohashi, born elijah solow-ohashi, is a stuent at the university of california, santa cruz</p>
+		<p style="color:white;font-family:arial">solowohashi, born elijah solow-ohashi, is a student at the university of california, santa cruz</p>
 		<a style="color:white;font-family:arial" href="https://www.instagram.com/solowohashi/">instagram</a></p>
 		<img src="img/agh.jpg"/>
 		<nav>
