--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 		<a style="color:white;font-family:arial" href="https://www.instagram.com/solowohashi/">instagram</a></p>
 		<img src="img/agh.jpg"/>
 		<nav>
-			<ul>
+			<ol>
+				li><a href="lab1/index.html"> lab 1 </a></li>
 				<li><a href="lab2/index.html"> lab 2 </a></li>
 				<li><a href="lab3/index.html"> lab 3 </a></li>
 				<li><a href="lab4/index.html"> lab 4 </a></li>
 				<li><a href="lab5/index.html"> lab 5 </a></li>
 				<li><a href="lab6/index.html"> lab 6 </a></li>
+			</ol>
 	</main>
 
 </body>
