--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<img src="img/agh.jpg"/>
 		<nav>
 			<ol>
-				li><a href="lab1/index.html"> lab 1 </a></li>
+				<li><a href="lab1/index.html"> lab 1 </a></li>
 				<li><a href="lab2/index.html"> lab 2 </a></li>
 				<li><a href="lab3/index.html"> lab 3 </a></li>
 				<li><a href="lab4/index.html"> lab 4 </a></li>
