--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body style="background-color:black;">
 	<main>
-		<p style="color:white;font-family:arial">solowohashi, born elijah solow-ohashi, is a student at the university of california, santa cruz</p>
-		<a style="color:white;font-family:arial" href="https://www.instagram.com/solowohashi/">instagram</a></p>
+		<p>solowohashi, born elijah solow-ohashi, is a student at the university of california, santa cruz</p>
+		<a href="https://www.instagram.com/solowohashi/">instagram</a>
 		<img src="img/agh.jpg"/>
 		<nav>
 			<ol>
