--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
 	<title>badwebsite</title>
 	<link rel="stylesheet" type="text/css" href="css/site.css">
-	<link rel="apple-touch-icon" type="image/coding_html.png" href="personicon.png">
 </head>
-<body style="background-color:black;">
+<body>
 	<main>
-		<p>solowohashi, born elijah solow-ohashi, is a student at the university of california, santa cruz</p>
+		<p>solowohashi,
+			 born elijah solow-ohashi,
+			 is a student at the university of california, santa cruz.
+		</p>
 		<a href="https://www.instagram.com/solowohashi/">instagram</a>
 		<img src="img/agh.jpg"/>
 		<nav>
