--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 </head>
 <body>
 	<main>
-		<p>solowohashi,
-			 born elijah solow-ohashi,
-			 is a student at the university of california, santa cruz.
-		</p>
+		<div id="sloth">
+			<p>solowohashi,
+				 born elijah solow-ohashi,
+				 is a student at the university of california, santa cruz.
+			</p>
+		</div>
 		<a href="https://www.instagram.com/solowohashi/">instagram</a>
 		<img src="img/agh.jpg"/>
 		<nav>
