--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 	<main>
 		<div id="sloth">
+			<h1>elijah solow-ohashi</h1>
 			<p>solowohashi,
 				 born elijah solow-ohashi,
 				 is a student at the university of california, santa cruz.
