--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<li><a href="lab2/index.html"> lab 2 </a></li>
 				<li><a href="lab3/index.html"> lab 3 </a></li>
 				<li><a href="lab4/index.html"> lab 4 </a></li>
-				<li><a id="r" href="lab5/index.html"> lab 5 </a></li>
+				<li><a id="li_5" href="lab5/index.html"> lab 5 </a></li>
 				<li><a href="lab6/index.html"> lab 6 </a></li>
 			</ol>
 		</div>
