--- a/index.html
+++ b/index.html
@@ -8,21 +8,19 @@
 	<main>
 		<h1>elijah solow-ohashi</h1>
 		<div id="sloth">
-			<p>solowohashi,
-				 born elijah solow-ohashi,
-				 is a student at the university of california, santa cruz.
+			<p>solowohashi, born elijah solow-ohashi, is a student at the university of california, santa cruz. elijah was born in los angeles when he was five years old. as a child, he liked breastfeeding and drawing. at thirteen, he became a man under jewish law. around the same time, he became skeptical of organized religion and sought answers about the purpose of the universe. in grade school, elijah met lilet, a famous thinker and musician from the nascent period of the digitization era. other figures, including taj lalwani, mr. miles wilson, and levon momdjian had a great influence on elijah’s life and work. In his later life, elijah contracted a bad case of heartbreak. He remains in a state of emotional arrest from years of trauma.
 			</p>
 		<a href="https://www.instagram.com/solowohashi/">instagram</a>
-		<img src="img/agh.jpg"/>
+		<img src="img/skimaskpic.jpg"/>
 		<nav>
-			<ol>
+			<ul>
 				<li><a href="lab1/index.html"> lab 1 </a></li>
 				<li><a href="lab2/index.html"> lab 2 </a></li>
 				<li><a href="lab3/index.html"> lab 3 </a></li>
 				<li><a href="lab4/index.html"> lab 4 </a></li>
 				<li><a href="lab5/index.html"> lab 5 </a></li>
 				<li><a href="lab6/index.html"> lab 6 </a></li>
-			</ol>
+			</ul>
 		</div>
 	</main>
 
