--- a/lab3/index.html
+++ b/lab3/index.html
@@ -6,6 +6,11 @@
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-
+	<h1>Lab 2 File Structure</h1>
+	<p>the purpose of the this lab was to expand our website programming knowledge.</p>
+	<h1>Challenges</h1>
+	<p>no challenges yet</p>
+	<h1>Results</h1>
+	<img src="lab3/img/lab3task1.png">
 </body>
 </html>
