--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 		<h1>elijah solow-ohashi</h1>
 		<img src="img/skimaskpic.jpg"/>
 		<div id="sloth">
-				<p>solowohashi, born elijah solow-ohashi, is a student at the university of california, santa cruz. elijah was born in los angeles when he was five years old. as a child, he liked breastfeeding and drawing. at thirteen, he became a man under jewish law. around the same time, he became skeptical of organized religion and sought answers about the purpose of the universe. in grade school, elijah met lilet, a famous thinker and musician from the nascent period of the digitization era. other figures, including taj lalwani, mr. miles wilson, and levon momdjian had a great influence on elijah’s life and work. recently, elijah contracted a bad case of heartbreak.
+				<p>solowohashi, born elijah solow-ohashi, is a student at the university
+					 of california, santa cruz. elijah was born in los angeles when he was
+					 five years old. as a child, he liked breastfeeding and drawing. at
+					 thirteen, he became a man under jewish law. around the same time, he
+					 became skeptical of organized religion and sought regarding existentialism.
+					 in grade school, elijah met lilet, a famous
+					 thinker and musician from the nascent period of the digitization era.
+					 other figures, including taj lalwani, mr. miles wilson, and levon
+					 momdjian had a great influence on elijah’s life and work. recently,
+					 elijah contracted a bad case of heartbreak.
 				</p>
 			<a href="https://www.instagram.com/solowohashi/">instagram</a>
 		</div>
