--- a/lab3/index.html
+++ b/lab3/index.html
@@ -11,6 +11,6 @@
 	<h1>Challenges</h1>
 	<p>no challenges yet</p>
 	<h1>Results</h1>
-	<img src="lab3/img/lab3task1.jpg">
+	<img src="lab3/img/lab3task1.png"/>
 </body>
 </html>
