--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab 3: File Structure and Transfer</title>
+	<title>Lab 3: File Structure /title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-	<h1>Lab 2 File Structure</h1>
+	<h1>Lab 3: File Structure</h1>
 	<p>the purpose of the this lab was to expand our website programming knowledge.</p>
 	<h1>Challenges</h1>
 	<p>no challenges yet</p>
