--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<main>
 		<h1>elijah solow-ohashi</h1>
-		<img src="img/skimaskpic.jpg"/>
+		<img src="img/skimaskpic.jpg">
 		<div id="sloth">
 				<p>solowohashi, born elijah solow-ohashi, is a student at the university
 					 of california, santa cruz. elijah was born in los angeles when he was
