--- a/lab3/index.html
+++ b/lab3/index.html
@@ -9,6 +9,6 @@
 	<h1>Challenges</h1>
 	<p>no challenges yet</p>
 	<h1>Results</h1>
-	<img src="img/lab3task1.jpg" alt="task1">
+	<img src="img/IDKtask1.jpg">
 </body>
 </html>
