--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
 		<img src="img/skimaskpic.jpg">
 		<div id="sloth">
 				<p>solowohashi, born elijah solow-ohashi, is a student at the university
-					 of california, santa cruz. elijah was born in los angeles when he was
-					 five years old. as a child, he liked breastfeeding and drawing. at
+					 of california, santa cruz. as a child, he liked breastfeeding and drawing. at
 					 thirteen, he became a man under jewish law. around the same time, he
-					 became skeptical of organized religion and sought regarding existentialism.
+					 became skeptical of organized religion.
 					 in grade school, elijah met lilet, a famous
-					 thinker and musician from the nascent period of the digitization era.
+					 thinker from the nascent period of the digitization era.
 					 other figures, including taj lalwani, mr. miles wilson, and levon
-					 momdjian had a great influence on elijah’s life and work. recently,
-					 elijah contracted a bad case of heartbreak.
+					 momdjian also had a great influence on elijah’s life and work.
 				</p>
 			<a href="https://www.instagram.com/solowohashi/">instagram</a>
 		</div>
