--- a/lab3/index.html
+++ b/lab3/index.html
@@ -9,6 +9,6 @@
 	<h1>Challenges</h1>
 	<p>no challenges yet</p>
 	<h1>Results</h1>
-	<img src="img/IDKtask1.jpg">
+	<p>The following images show the stages of completion for lab 3</p>
 </body>
 </html>
