--- a/lab3/index.html
+++ b/lab3/index.html
@@ -11,6 +11,6 @@
 	<p>no challenges yet</p>
 	<h1>Results</h1>
 	<p>The following images show the stages of completion for lab 3</p>
-	<img src="img/angelosoliman.jpeg">
+	<img src="lab3/angelosoliman.jpeg">
 </body>
 </html>
