--- a/lab3/index.html
+++ b/lab3/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Lab 3: File Structure</title>
-	<link rel="stylesheet" type="text/css" href="css/site.css">
+	<link rel="stylesheet" type="text/css" href="lab3/css/site.css">
 </head>
 <body>
 	<h1>Lab 3: File Structure</h1>
