--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 					 became skeptical of organized religion.
 					 in grade school, elijah met lilet, a famous
 					 thinker from the nascent period of the digitization era.
-					 other figures, including taj lalwani, mr. miles wilson, and levon
-					 momdjian also had a great influence on elijah’s life and work.
+					 other figures, including taj lalwani, miles wilson, and levon
+					 momdjian have had a great influence on elijah’s life and work.
 				</p>
 			<a href="https://www.instagram.com/solowohashi/">instagram</a>
 		</div>
