--- a/lab3/index.html
+++ b/lab3/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Lab 3: File Structure</title>
-	<link rel="stylesheet" type="text/css" href="lab3/css/site.css">
+	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
 	<h1>Lab 3: File Structure</h1>
@@ -11,6 +11,6 @@
 	<p>no challenges yet</p>
 	<h1>Results</h1>
 	<p>The following images show the stages of completion for lab 3</p>
-	<img src="lab3/angelosoliman.jpeg">
+	<img src="lab3task3a.png"/>
 </body>
 </html>
