--- a/lab3/index.html
+++ b/lab3/index.html
@@ -11,6 +11,11 @@
 	<p>no challenges yet</p>
 	<h1>Results</h1>
 	<p>The following images show the stages of completion for lab 3</p>
+	<img src="lab3task1.png"/>
+	<img src="lab3task2a.png"/>
+	<img src="lab3task2b.png"/>
 	<img src="lab3task3a.png"/>
+	<img src="lab3task3b.png"/>
+	<img src="lab3task8.png"/>
 </body>
 </html>
