--- a/index.html
+++ b/index.html
@@ -3,21 +3,24 @@
 <head>
 	<title>badwebsite</title>
 	<link rel="stylesheet" type="text/css" href="css/site.css">
+	<script type="text/javascript" src=""></script>
 </head>
 <body>
 	<main>
 		<h1>elijah solow-ohashi</h1>
 		<img src="img/skimaskpic.jpg">
 		<div id="sloth">
-				<p>solowohashi, born elijah solow-ohashi, is a student at the university
+				<p>
+					<pre>
+						solowohashi, born elijah solow-ohashi, is a student at the university
 					 of california, santa cruz. as a child, he liked breastfeeding and drawing. at
 					 thirteen, he became a man under jewish law. around the same time, he
-					 became skeptical of organized religion.
-					 in grade school, elijah met lilet, a famous
-					 thinker from the nascent period of the digitization era.
-					 other figures, including taj lalwani, miles wilson, and levon
-					 momdjian have had a great influence on elijah’s life and work.
-				</p>
+					 became skeptical of organized religion. in grade school, elijah met lilet,
+						 a famous thinker from the nascent period of the digitization era.
+					 other figures, including taj lalwani, miles wilson, and levon<
+					 momdjian have had a great influence on elijah's life and work.
+				</pre>
+			</p>
 			<a href="https://www.instagram.com/solowohashi/">instagram</a>
 		</div>
 			<ul>
