--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 					 momdjian have had a great influence on elijah's life and work.
 				</pre>
 			</p>
+			<script type="text/javascript" src="lab5/js/lab.js">
+			
+			</script>
 			<a href="https://www.instagram.com/solowohashi/">instagram</a>
 		</div>
 			<ul>
