--- a/lab5/index.html
+++ b/lab5/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 5: Data Types and Variables</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+	<div id = "lab5content">
+		<h2>Challenge</h2>
+			<pre>
+Work on creating and showing javascript
+variables in console and on a webpage
+			</pre>
+		<h2>Problems</h2>
+		<pre>
+I kept on getting an error message in the console window.
+I also thought I had broken code because the unstyled text
+was belnding into the background.
+		</pre>
+		<h2>Results</h2>
+		<pre>
+All the text and images on this webpage are part of this assignment.
+The javascript output is printed below.
+		</pre>
+		<img src="diamondback.jpg" alt="">
+		<h2>Script Output</h2>
+		<div>
+        <script type="text/javascript" src="js/lab.js"></script>
+			</div>
+	</div>
 
 </body>
 </html>
