--- a/lab5/index.html
+++ b/lab5/index.html
@@ -25,7 +25,7 @@ The javascript output is printed below.
 		</pre>
 		<img src="diamondback.jpg" alt="">
 		<h2>Script Output</h2>
-		<div>
+		<div id = "lab5js">
         <script type="text/javascript" src="js/lab.js"></script>
 			</div>
 	</div>
