--- a/lab5/index.html
+++ b/lab5/index.html
@@ -23,11 +23,12 @@ was belnding into the background.
 All the text and images on this webpage are part of this assignment.
 The javascript output is printed below.
 		</pre>
-		<img src="diamondback.jpg" alt="">
+		<img src="diamondback.jpg" >
 		<h2>Script Output</h2>
-		<div id = "lab5js">
-        <script type="text/javascript" src="js/lab.js"></script>
-			</div>
+		<div class="java">
+        <script type="text/javascript" src="js/lab.js">
+				</script>
+		</div>
 	</div>
 
 </body>
