--- a/lab6/index.html
+++ b/lab6/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 6: Arrays and Objects</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+	<h1>Lab 6: Arrays and Objects</h1>
+	<div id="lab6content">
+		<h2>Challenge</h2><pre>
+				Lab 6 asks us to link
+				Javaxcript to our HTML,
+				using one array and one
+				object.
+			</pre>
+		<h2>Problems</h2>
+
+		<h2>Results</h2>
+			<script src="js/lab.js"></script>
+			<img src="img/diamondback6.jpg" >
+	</div>
 
 </body>
 </html>
