--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				</pre>
 			</p>
 			<script type="text/javascript" src="lab5/js/lab.js">
-			
+
 			</script>
 			<a href="https://www.instagram.com/solowohashi/">instagram</a>
 		</div>
@@ -33,6 +33,7 @@
 				<li><a href="lab4/index.html"> lab 4 </a></li>
 				<li><a href="lab5/index.html"> lab 5 </a></li>
 				<li><a href="lab6/index.html"> lab 6 </a></li>
+				<li><a href="lab7/index.html"> lab 6 </a></li>
 			</ul>
 	</main>
 
