--- a/lab7/index.html
+++ b/lab7/index.html
@@ -10,13 +10,23 @@
       <h1>Lab 7: Functions</h1>
       <h2>Challenge</h2>
         <pre>
-          "This lab asked us to create a new lab
+          This lab asked us to create a new lab
           folder and incorporate Functions into
           the Results section. We were also asked
-          to link a CSS document to the HTML."
+          to link a CSS document to the HTML.
         </pre>
       <h2>Problems</h2>
+        <pre>
+          I'm still struggling with
+          understanding Javascript.The problem solving
+          behind it feels unnatural.
+          Where HTML is reflected in the visual
+          output, Javascript seems to contain a lot
+          of nuance that I haven't been able to
+          understand.
+        </pre>
       <h2>Results</h2>
+      The results are present on this webpage and below the Script Output heading.
     </div>
     <div id="lab7js">
       <h2>Script Output</h2>
