--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 	<main>
-		<h1>elijah solow-ohashi</h1>
+		<h1><pre>
+		elijah
+		solow
+		ohashi
+		</pre></h1>
 		<img src="img/skimaskpic.jpg">
 		<div id="sloth">
 				<p>
