--- a/lab7/index.html
+++ b/lab7/index.html
@@ -1,3 +1,4 @@
+<!--color scheme from light to dark: #ffffff #cccccc #666666 #333333 #0000000-->
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
