--- a/lab8/index.html
+++ b/lab8/index.html
@@ -6,11 +6,26 @@
 <body>
   <div id="lab8content">
     <h1>Lab 8: Anon Functions and Callbacks</h1>
-    <h2>Challenge</h2>
-    <p>We were asked to create a set of anonymous functions and callbacks.</p>
+    <h2>Challenge</h2><pre>
+    We were asked to create a set of anonymous
+    functions and callbacks. The first set of
+    functions gave back a string in console
+    that proved that each function worked. In the
+    second set of functions, we used a callback function
+    to nest an anoynous function that used our earlier
+    functions. Then we staggered the timing for the last
+    set of functions.
+    </pre>
     <h2>Problems</h2>
-    <p>I still struggle with the logic behind functions. A lot of it is still unclear to me. </p>
-    <h2>Results</h2>
-    <p>The results are in the console.</p>
+    <pre>
+    I still struggle with the logic behind functions.
+    A lot of it is still unclear to me. But I was able to
+    follow along using the code that was given in the Lab.
+    </pre>
+    <h2>Results</h2><pre>
+    The results are in the console.
+    The wording is a bit different from the lab example,
+    but the funcitons work and perform the same.
+    </pre>
   </div>
 </body>
