--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="icon" type="image/png" href="img/graveicon.png">
 	<title>badwebsite</title>
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 	<script type="text/javascript" src=""></script>
 </head>
 <body>
 	<main>
-		<h1>e l i j a h    s o l o w    o h a s h i</h1>
+		<h1>e l i j a h - s o l o w - o h a s h i</h1>
 		<img src="img/skimaskpic.jpg">
 		<div id="sloth">
 				<p>
