--- a/sectionD/index.html
+++ b/sectionD/index.html
@@ -2,12 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <script type="text/javascript" src="js/script.js">
+    <script type="text/javascript" src="js/script.js"></script>
 
-    </script>
-    <title></title>
+    <title></title>s
   </head>
   <body>
-
+    <div id="div_1">
+      <p>this is annoying</p>
+    </div>
+    <script type="text/javascript" src="js/script21.js" defer></script>
   </body>
 </html>
