--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 				<li><a href="lab6/index.html"> lab 6 </a></li>
 				<li><a href="lab7/index.html"> lab 7 </a></li>
 				<li><a href="lab8/index.html"> lab 8 </a></li>
+				<li><a href="lab9/index.html"> lab 9 </a></li>
 			</ul>
 	</main>
 
