--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
 				<li><a href="lab7/index.html"> lab 7 </a></li>
 				<li><a href="lab8/index.html"> lab 8 </a></li>
 				<li><a href="lab9/index.html"> lab 9 </a></li>
+				<li><a href="lab10/index.html"> lab 10 </a></li>
+				<li><a href="lab11/index.html"> lab 11 </a></li>
+				<li><a href="lab12/index.html"> lab 12 </a></li>
+				<li><a href="lab13/index.html"> lab 13 </a></li>
+				<li><a href="lab14/index.html"> lab 14 </a></li>
+				<li><a href="lab15/index.html"> lab 15 </a></li>
+				<li><a href="lab16/index.html"> lab 16 </a></li>
+				<li><a href="lab17/index.html"> lab 17 </a></li>
+
 			</ul>
 	</main>
 
