--- a/lab11/index.html
+++ b/lab11/index.html
@@ -6,6 +6,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="js/lab.js" defer></script>
     <script type="text/css" src="css/lab.css">
+    <script type="text/css" src="../css/site.css">
 
     </script>
   </head>
