--- a/lab11/index.html
+++ b/lab11/index.html
@@ -5,10 +5,7 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="js/lab.js" defer></script>
-    <script type="text/css" src="css/lab.css"></script>
-    <script type="text/css" src="../css/site.css">
-
-    </script>
+    <link rel="stylesheet" type="text/css" href="css/lab.css"></script>
   </head>
   <body>
     <div id="lab11content">
