--- a/templated-snapshot/index.html
+++ b/templated-snapshot/index.html
@@ -7,9 +7,11 @@
 <html>
 	<head>
 		<title>Snapshot by TEMPLATED</title>
+		    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/new.css" />
 		<script type="text/javascript" src="assets/js/javascript.js" defer>
 
 		</script>
@@ -85,8 +87,9 @@
 							<!-- Social -->
 								<div class="social column">
 									<h3>About Me</h3>
-									<p id="social1">Mus sed interdum nunc dictum rutrum scelerisque erat a parturient condimentum potenti dapibus vestibulum condimentum per tristique porta. Torquent a ut consectetur a vel ullamcorper a commodo a mattis ipsum class quam sed eros vestibulum quisque a eu nulla scelerisque a elementum vestibulum.</p>
-									<p id="social2">Aliquet dolor ultricies sem rhoncus dolor ullamcorper pharetra dis condimentum ullamcorper rutrum vehicula id nisi vel aptent orci litora hendrerit penatibus erat ad sit. In a semper velit eleifend a viverra adipiscing a phasellus urna praesent parturient integer ultrices montes parturient suscipit posuere quis aenean. Parturient euismod ultricies commodo arcu elementum suspendisse id dictumst at ut vestibulum conubia quisque a himenaeos dictum proin dis purus integer mollis parturient eros scelerisque dis libero parturient magnis.</p>
+									<p id="name_email_id" class="info">Mus sed interdum nunc dictum rutrum scelerisque erat a parturient condimentum potenti dapibus vestibulum condimentum per tristique porta. Torquent a ut consectetur a vel ullamcorper a commodo a mattis ipsum class quam sed eros vestibulum quisque a eu nulla scelerisque a elementum vestibulum.</p>
+									<p id="bio_id" class="info">Aliquet dolor ultricies sem rhoncus dolor ullamcorper pharetra dis condimentum ullamcorper rutrum vehicula id nisi vel aptent orci litora hendrerit penatibus erat ad sit. In a semper velit eleifend a viverra adipiscing a phasellus urna praesent parturient integer ultrices montes parturient suscipit posuere quis aenean. Parturient euismod ultricies commodo arcu elementum suspendisse id dictumst at ut vestibulum conubia quisque a himenaeos dictum proin dis purus integer mollis parturient eros scelerisque dis libero parturient magnis.</p>
+<button type="button" name="button" id="color_me_id">color me</button>
 									<h3>Follow Me</h3>
 									<ul class="icons">
 										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
@@ -112,7 +115,7 @@
 											<textarea name="message" id="message" rows="6" placeholder="Message"></textarea>
 										</div>
 										<ul class="actions">
-											<li><input value="Send Message" class="button" type="submit" id="submit-bio-id"></li>
+											<li><input value="Send Message" class="button"  id="submit_bio_id"></li>
 										</ul>
 
 									</form>
