--- a/sectionD/index.html
+++ b/sectionD/index.html
@@ -2,14 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <script type="text/javascript" src="js/script.js"></script>
+    <script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src="js/js2123.js" defer></script>
 
-    <title></title>s
+    <title></title>
   </head>
   <body>
-    <div id="div_1">
+    <div id="container">
+
       <p>this is annoying</p>
     </div>
-    <script type="text/javascript" src="js/script21.js" defer></script>
   </body>
 </html>
