--- a/sectionD/index.html
+++ b/sectionD/index.html
@@ -5,13 +5,16 @@
     <script
   src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="js/js2123.js" defer></script>
+    <link rel="stylesheet" href="css/section.css">
 
     <title></title>
   </head>
   <body>
     <div id="container">
-
+<div id="origin_text"><p>here is the original text. clone it.</p></div>
+<textarea id="input_text"></textarea>
       <p>this is annoying</p>
     </div>
+    </form>
   </body>
 </html>
